demo-kustomize/overlays/dev/client-b/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  template:
    spec:
      containers:
      - name: app
        image: nginx:1.22-alpine
        resources:
          requests:
            memory: "192Mi"
            cpu: "150m"
          limits:
            memory: "384Mi"
            cpu: "400m"
